--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "home/.zsh/plugins/zsh-syntax-highlighting"]
 	path = home/.zsh/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "home/.rbenv"]
+	path = home/.rbenv
+	url = https://github.com/sstephenson/rbenv.git
