--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,8 @@
 unbind %
+
 bind | split-window -h
 bind - split-window -v
+bind m command-prompt "split-window -h 'exec man %%'"
 
 set -g set-titles on
 set -g set-titles-string "#W"
@@ -35,7 +37,7 @@ set -g default-terminal "screen-256color"
 # set -g mouse-select-pane on
 
 # Allow xterm titles in terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
-# set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
+set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
 
 # Scroll History
 set -g history-limit 30000
@@ -46,7 +48,8 @@ setw -g alternate-screen on
 # Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer access.
 set -s escape-time 50
 
-#new-session -s chat -n irssi "autossh -M 20000 -t pyre 'screen -r irssi' && zsh"
-#new-window -n mail "mutt && zsh"
+# new-session -s chat -n irssi "autossh -M 20000 -t pyre 'screen -r irssi' && zsh"
+new-session -s mail
+new-window -n mail "mutt && zsh"
 
 #select-window -t irssi
