--- a/home/.config/fontconfig/fonts.conf
+++ b/home/.config/fontconfig/fonts.conf
@@ -4,11 +4,18 @@
 
   <!-- Prevent Gnome from using embedded bitmaps in fonts like Calibri -->
   <match target="font">
-      <edit name="embeddedbitmap" mode="assign"><bool>false</bool></edit>
+    <edit name="embeddedbitmap" mode="assign"><bool>false</bool></edit>
   </match>
 
   <!-- Substitute truetype fonts for bitmap ones -->
   <match target="font">
-      <edit name="prefer_outline"><bool>true</bool></edit>
+    <edit name="prefer_outline"><bool>true</bool></edit>
   </match>
+
+  <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Lohit Kannada</family>
+    </prefer>
+  </alias>
 </fontconfig>
