--- a/root/etc/xdg/pacaur/config
+++ b/root/etc/xdg/pacaur/config
@@ -6,13 +6,14 @@
 
 # The following options are commented out with their default values listed.
 # If you wish to use different values, uncomment and update the values.
-builddir="${HOME}/Documents/Builds"    # build directory
+# The Color and VerbosePkgLists options can be enabled in /etc/pacman.conf.
+#builddir="${BUILDDIR:-$tmpdir}"       # build directory
 #editor="${EDITOR:-vi}"                # PKGBUILD editor
-editpkgbuild=false                     # edit PKGBUILD script
-editinstall=false                      # edit install script
+#editpkgbuild=true                     # edit PKGBUILD script
+#editinstall=true                      # edit install script
 #fallback=true                         # pacman fallback to the AUR
-clean=false                            # clean up after package install
-cleandevel=false                       # clean up devel package
-#secure=false                          # enhanced security
+#clean=true                            # clean up after package install
+#cleandevel=true                       # clean up devel package
 #sudoloop=false                        # prevent sudo timeout
+#sortbyvotes=true                      # sort search results by votes
 
